# max-chat-frontend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/max_chat_frontend/: __init__.py  main.py
src/max_chat_frontend/core/: __init__.py  config.py
src/max_chat_frontend/services/: __init__.py  backend_api.py
templates/: base.html  conversation_detail.html  conversations.html  dashboard.html  errors.html  llm_request_detail.html  llm_requests.html  login.html  message_detail.html  messages.html  user_detail.html  users.html
